--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="global.css">
     <link
@@ -24,14 +24,10 @@
           <p class="get-90-off">Get 90% off and free shipment</p>
           <p class="get-90-off">with WatcHGoods</p>
         </div>
-        <div class="watchgoods-trusted-since">
-          WatcHGoods trusted since 2018
-        </div>
         <div class="about-us9" id="aboutUsText">About Us</div>
         <div class="locations7" id="locationsText">Locations</div>
         <div class="contact-us8" id="contactUsText">Contact Us</div>
         <div class="products1" id="productsText">Products</div>
-        <div class="products1" id="productsText1">Products</div>
       </div>
       <div class="category">Category</div>
       <div class="home-child"></div>
@@ -57,8 +53,9 @@
             src="Pictures/G-Shock_logo.png"
           />
         </div>
-        <div class="watch-new-arrival-child"></div>
-        <div class="watch-new-arrival-item"></div>
+        <div class="scroll">
+            <div class="watch-new-arrival-child"></div>
+            <div class="watch-new-arrival-item"></div>
         <img
           class="rolexnewarrival1-2-icon"
           alt=""
@@ -71,6 +68,8 @@
           alt=""
           src="Pictures/RolexNewArrival2.png"
         />
+        </div>
+        
 
         <img
           class="rolexnewarrival2-2-icon"
@@ -92,6 +91,8 @@
         </div>
       </div>
     </div>
+
+    <script src="home.js"></script>
 
   </body>
 </html>
