--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
           <img
             class="rolex-logo-design2-1-icon"
             alt=""
-            src="Pictures/rolex-logo-design2.jpg"
+            src="Pictures/rolex-logo-editorial-illustration-free-vector-removebg-preview.png"
           />
 
           <img
