--- a/contactUs.html
+++ b/contactUs.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <form id="form">
+        <h1 class="header">Contact Us</h1>
     <div class="form-field">
         <label for="username">Name</label>
         <input type="text" id="username" name="username" placeholder="Enter your name" />
@@ -19,7 +20,8 @@
 
     <div class="form-field">
         <label for="country">Country</label>      
-            <select id="country" name="country" class="form-control">
+            <select id="country" name="country" class="country">
+                <option value="">-- Select --</option>
                 <option value="Afghanistan">Afghanistan</option>
                 <option value="Åland Islands">Åland Islands</option>
                 <option value="Albania">Albania</option>
