--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="aboutUs.css" />
+    <title>About Us</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;1,400&display=swap"
@@ -28,7 +29,7 @@
           <p class="watchhgods-is-a">services.</p>
         </div>
         <i class="click-here-for" id="clickHereFor"
-          >Click Here for more information!</i
+          >Click Here for contact us!</i
         >
         <div class="rectangle-parent">
           <div class="group-child"></div>
