--- a/location.html
+++ b/location.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="location.css" />
+    <title>Location</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;1,400&display=swap"
