--- a/home.html
+++ b/home.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WatchHGoods</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="global.css">
     <link
