--- a/products.html
+++ b/products.html
@@ -2,45 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./products.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="products.css" />
+    <title>Products</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;1,400&display=swap"
-    />
+    /> 
   </head>
   <body>
     <div class="products">
       <img
-        class="rolex-logo-design2-2-icon"
+        class="rolex-logo-design"
         alt=""
-        src="./public/rolexlogodesign2-2@2x.png"
+        src="Pictures/rolex-logo-design2.jpg"
         id="rolexLogoDesign22Image"
       />
 
       <img
-        class="seiokologo-2-icon"
+        class="seiokologo"
         alt=""
-        src="./public/seiokologo-2@2x.png"
+        src="Pictures/SeiokoLogo.jpg"
         id="seiokoLogo2Image"
       />
 
       <img
-        class="g-shock-logo-2-icon"
+        class="g-shock-logo"
         alt=""
-        src="./public/gshock-logo-2@2x.png"
+        src="Pictures/G-Shock_logo.png"
         id="gShockLogo2Image"
       />
 
       <div class="our-brand-product">Our Brand Product</div>
-      <div class="rectangle-parent3">
-        <div class="group-child12"></div>
-        <div class="about-us3" id="aboutUsText">About Us</div>
-        <div class="contact-us3" id="contactUsText">Contact Us</div>
-        <div class="locations3" id="locationsText">Locations</div>
+      <div class="rectangle-parent">
+        <div class="group-child"></div>
+        <div class="about-us" id="aboutUsText">About Us</div>
+        <div class="contact-us" id="contactUsText">Contact Us</div>
+        <div class="locations" id="locationsText">Locations</div>
       </div>
     </div>
-      </script>
+    <script src="products.js"></script>
   </body>
 </html>
