--- a/GshockMen.html
+++ b/GshockMen.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="RolexHJ.css" />
+    <link rel="stylesheet" href="GshockMen.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;1,400&display=swap"
@@ -20,10 +20,10 @@
       </div>
       <div class="rectangle-parent22">
         <div class="group-child25"></div>
-        <img class="icon" alt="" src="Rolex/Watch4.png" />
+        <img class="icon" alt="" src="G-shock/Watch1.png" />
 
-        <div class="rp-154">Rp. 13.999.000,00</div>
-        <div class="rolex-KD">Rolex LO - 910</div>
+        <div class="rp-154">Rp. 3.899.000,00</div>
+        <div class="rolex-KD">G-shock Men 910</div>
       </div>
     </div>
     <script src="RolexKD.js"></script>
