--- a/seiko.html
+++ b/seiko.html
@@ -4,60 +4,58 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./seiko.css" />
+    <link rel="stylesheet" href="Rolex.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;1,400&display=swap"
     />
   </head>
   <body>
-    <div class="seiko">
-      <div class="group-div">
-        <div class="group-child3"></div>
-        <div class="group-child4"></div>
-        <div class="group-child5"></div>
-        <div class="group-child6"></div>
-        <div class="seiko-men-341">Seiko Men 341</div>
-        <div class="seiko-jk-908">Seiko JK-908</div>
-        <div class="seiko-fs-8910">Seiko FS-8910</div>
-        <div class="seiko-lm-9017">Seiko LM-9017</div>
-        <div class="rp-879900000">Rp. 8.799.000,00</div>
-        <div class="rp-779900000">Rp. 7.799.000,00</div>
-        <div class="rp-489900000">Rp. 4.899.000,00</div>
-        <div class="rp-548900000">Rp. 5.489.000,00</div>
+    <div class="rolex">
+      <div class="rectangle-parent33">
+        <div class="group-child39" id="rectangle"></div>
+        <div class="group-child40" id="rectangle1"></div>
+        <div class="group-child41" id="rectangle2"></div>
+        <div class="group-child42"></div>
+        <img class="icon" alt="" src="Seiko/Watch1.png" id="image" />
+
         <img
-            class="watch1"
-            alt=""
-            src="Seiko/SRPG41K1.png"
-          />
+          class="watch2"
+          alt=""
+          src="Seiko/Watch3.png"
+          id="pNGTR21Image"
+        />
 
-          <img
-            class="watch2"
-            alt=""
-            src="Seiko/png-clipart-seiko-diving-watch-spring-drive-セイコー_-removebg-preview.png"
-          />
+        <img
+          class="watch3"
+          alt=""
+          src="Seiko/Watch2.png"
+          id="pNGTR31Image"
+        />
 
-          <img
-            class="watch3"
-            alt=""
-            src="Seiko/png-transparent-seiko-セイコー_プロスペックス-diving-watch-a-removebg-preview.png"
-          />
+        <div class="rolex-jd-2">Seiko Men 341</div>
+        <div class="rolex-kd-910">Seiko FS-8910</div>
+        <div class="rolex-hj-910">Seiko JK-908</div>
+        <div class="rolex-lo-910">Seiko LM-9017</div>
+        <div class="rp-171">Rp. 8.799.000,00</div>
+        <div class="rp-189">Rp. 7.799.000,00</div>
+        <div class="rp-139">Rp. 5.489.000,00</div>
+        <div class="rp-154">Rp. 4.899.000,00</div>
+        <img
+          class="watch4"
+          alt=""
+          src="Rolex/Watch4.png"
+          id="pngTransparentRoundBlackRoImage"
+        />
 
-    
-          <img
-            class="watch4" 
-            alt=""
-            src="Seiko/SRPG35K1.png"
-          />
-        <div class="rectangle-parent1">
-          <div class="group-child7"></div>
-          <div class="about-us3" id="aboutUsText">About Us</div>
-          <div class="contact-us3" id="contactUsText">Contact Us</div>
-          <div class="locations3" id="locationsText">Locations</div>
-          
+        <div class="rectangle-parent34">
+          <div class="group-child43"></div>
+          <div class="about-us18" id="aboutUsText">About Us</div>
+          <div class="contact-us18" id="contactUsText">Contact Us</div>
+          <div class="locations18" id="locationsText">Locations</div>
         </div>
       </div>
     </div>
+    <script src="seiko.js"></script>
   </body>
 </html>
-
