--- a/SeikoJK.html
+++ b/SeikoJK.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="RolexHJ.css" />
+    <link rel="stylesheet" href="RolexJD.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;1,400&display=swap"
     />
   </head>
   <body>
-    <div class="rolex-kd">
+    <div class="rolex-jd">
       <div class="rectangle-parent21">
         <div class="group-child24"></div>
         <div class="about-us12" id="aboutUsText">About Us</div>
@@ -20,12 +20,12 @@
       </div>
       <div class="rectangle-parent22">
         <div class="group-child25"></div>
-        <img class="icon" alt="" src="Rolex/Watch4.png" />
+        <img class="icon" alt="" src="Seiko/Watch2.png" />
 
-        <div class="rp-154">Rp. 13.999.000,00</div>
-        <div class="rolex-KD">Rolex LO - 910</div>
+        <div class="rp-1710000000">Rp. 7.799.000,00</div>
+        <div class="rolex-jd-">Seiko JK-908</div>
       </div>
     </div>
-    <script src="RolexKD.js"></script>
+    <script src="RolexJD.js"></script>
   </body>
 </html>
