--- a/location.html
+++ b/location.html
@@ -18,16 +18,20 @@
       <div class="our-official-store">Our Official Store</div>
       <div class="text">
         <div class="gunung-sahari-street-container">
-          <p class="gunung-sahari-street">Gunung sahari street num. 12</p>
-          <p class="gunung-sahari-street">West Jakarta</p>
-          <p class="gunung-sahari-street">DKI Jakarta</p>
-          <p class="gunung-sahari-street">15560</p>
+          <p class="gunung-sahari-street">Timepiece Avenue
+            1234 Horology Street
+            Horologica City Timezone 98765</p>
         </div>
-        <div class="contact-us-at-container">
-          <p class="gunung-sahari-street">Contact us at: 08989540090</p>
-          <p class="gunung-sahari-street">Everyday 09.00 - 23.00 WIB</p>
+        <div class="rectangle">
+          <div class="contact-us-at-container">
+            <p class="gunung-sahari-street">Phone Number: +1 (555) 123-4567</p>
+            <p class="gunung-sahari-street">Operational Time:</p>
+            <p class="gunung-sahari-street">Monday - Friday: 10:00 AM - 7:00 PM</p>
+            <p class="gunung-sahari-street">Saturday: 10:00 AM - 5:00 PM</p>
+            <p class="gunung-sahari-street">Sunday: Closed</p>
+          </div>
         </div>
-        <i class="or-click-here" id="orClickHere">Or Click Here</i>
+        <i class="or-click-here" id="orClickHere">Or Click Here To Contact Us!</i>
         <div class="rectangle-parent">
           <div class="group-child16"></div>
           <div class="about-us5" id="aboutUsText">About Us</div>
