--- a/aboutUs.html
+++ b/aboutUs.html
@@ -30,9 +30,7 @@
             
             Discover the world of watches at our store and indulge in the artistry, precision, and elegance of timekeeping. Whether you are a seasoned watch collector, a fashion-conscious individual, or someone looking for the perfect gift, we invite you to explore our collection and let us be your trusted partner in finding the watch that truly defines you.</p>
         </div>
-        <i class="click-here-for" id="clickHereFor"
-          >Click Here for contact us!</i
-        >
+        <i class="click-here-for" id="clickHereFor">Click Here for contact us!</i>
         <div class="rectangle-parent">
           <div class="group-child"></div>
           <div class="about-us8" id="aboutUsText1">About Us</div>
