--- a/location.html
+++ b/location.html
@@ -31,7 +31,7 @@
             <p class="gunung-sahari-street">Sunday: Closed</p>
           </div>
         </div>
-        <i class="or-click-here" id="orClickHere">Or Click Here To Contact Us!</i>
+        <i class="or-click-here" id="orClickHere">Or click here to contact with us!</i>
         <div class="rectangle-parent">
           <div class="group-child16"></div>
           <div class="about-us5" id="aboutUsText">About Us</div>
