--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
         />
         </div>
         
-
-        <img
+        <div class="watch-new-arrival-inner2"></div>
+          <img
           class="rolexnewarrival2-2-icon"
           alt=""
           src="Pictures/RolexNewArrival3.png"
         />
+  
 
         <div class="rolex-mens-">Rolex Mens - HG 100</div>
         <div class="rolex-womens-">Rolex Womens - FH 110</div>
