--- a/Rolex.html
+++ b/Rolex.html
@@ -12,6 +12,10 @@
   </head>
   <body>
     <div class="rolex">
+      <div class="about-us9" id="aboutUsText">About Us</div>
+        <div class="locations7" id="locationsText">Locations</div>
+        <div class="contact-us8" id="contactUsText">Contact Us</div>
+        <div class="products1" id="productsText">Products</div>
       <div class="rectangle-parent33">
         <div class="group-child39" id="rectangle"></div>
         <div class="group-child40" id="rectangle1"></div>
@@ -57,5 +61,6 @@
       </div>
     </div>
     <script src="Rolex.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
