--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <div class="about-us6">
+      <div class="about-us9" id="aboutUsText">About Us</div>
+        <div class="locations7" id="locationsText">Locations</div>
+        <div class="contact-us8" id="contactUsText">Contact Us</div>
+        <div class="products1" id="productsText">Products</div>
       <img class="watch-store-1" alt="" src="Pictures/Watch Store.jpg" />
 
       <div class="about-us7">About Us</div>
@@ -40,5 +44,6 @@
       </div>
     </div>
     <script src="aboutUs.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
