--- a/contactUs.html
+++ b/contactUs.html
@@ -8,6 +8,10 @@
     <title>Contact Us</title>
 </head>
 <body>
+    <div class="about-us9" id="aboutUsText">About Us</div>
+        <div class="locations7" id="locationsText">Locations</div>
+        <div class="contact-us8" id="contactUsText">Contact Us</div>
+        <div class="products1" id="productsText">Products</div>
     <form id="form">
         <h1 class="header">Contact Us</h1>
     <div class="form-field">
@@ -280,7 +284,14 @@
     </div>
     <button type="submit" id="register-button">Send</button>
     </form>
+    <div class="rectangle-parent34">
+        <div class="group-child43"></div>
+        <div class="about-us18" id="aboutUsText">About Us</div>
+        <div class="contact-us18" id="contactUsText">Contact Us</div>
+        <div class="locations18" id="locationsText">Locations</div>
+      </div>
     <script src="contactUs.js"></script>
+    <script src="index.js"></script>
 </body>
     
 </html>
