--- a/RolexLO.html
+++ b/RolexLO.html
@@ -12,6 +12,10 @@
   </head>
   <body>
     <div class="rolex-kd">
+      <div class="about-us9" id="aboutUsText">About Us</div>
+        <div class="locations7" id="locationsText">Locations</div>
+        <div class="contact-us8" id="contactUsText">Contact Us</div>
+        <div class="products1" id="productsText">Products</div>
       <div class="rectangle-parent21">
         <div class="group-child24"></div>
         <div class="about-us12" id="aboutUsText">About Us</div>
@@ -27,5 +31,6 @@
       </div>
     </div>
     <script src="RolexKD.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
