--- a/location.html
+++ b/location.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <div class="location">
+      <div class="about-us9" id="aboutUsText">About Us</div>
+        <div class="locations7" id="locationsText">Locations</div>
+        <div class="contact-us8" id="contactUsText">Contact Us</div>
+        <div class="products1" id="productsText">Products</div>
       <img class="store-1-icon" alt="" src="Pictures/store.jpg" />
 
       <div class="our-official-store">Our Official Store</div>
@@ -41,5 +45,6 @@
       </div>
     </div>
     <script src="location.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
