--- a/products.html
+++ b/products.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <div class="products">
+      <div class="about-us9" id="aboutUsText">About Us</div>
+        <div class="locations7" id="locationsText">Locations</div>
+        <div class="contact-us8" id="contactUsText">Contact Us</div>
+        <div class="products1" id="productsText">Products</div>
       <img
         class="rolex-logo-design"
         alt=""
